bill-k8s/bill-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bill-vue
  labels:
    app: bill-vue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bill-vue
  template:
    metadata:
      labels:
        app: bill-vue
    spec:
      containers:
        - name: bill-vue
          imagePullPolicy: IfNotPresent
          image: ottokafka2/bill-vue:0.0.1
          ports:
            - containerPort: 80
              name: httpfront
---
apiVersion: v1
kind: Service
metadata:
  name: bill-vue
spec:
#  type: NodePort
  selector:
    app: bill-vue
  ports:
    - port: 80
